# Free_RTOS_CPSC_538G

./: .gitignore  Assignment_Guide.md  CMakeLists.txt  FreeRTOS-README.md  Project_instructions.txt  README.md  bugs_CBS.md  bugs_EDF.md  bugs_MP.md  bugs_SRP.md  changes_CBS.md  changes_EDF.md  changes_MP.md  changes_SRP.md  design_CBS.md  design_EDF.md  design_MP.md  design_SRP.md  future_CBS.md  future_MP.md  future_SRP.md  multi_proc_implementation.md  notepad.md  testing_CBS.md  testing_EDF.md  testing_MP.md  testing_SRP.md
Doc-CBS/: testing_CBS.md
Doc-EDF/: README.md  future_EDF.md  testing_EDF.md
Doc-MP/: future_MP.md  testing_MP.md
Doc-SRP/: changes_SRP.md  testing_SRP.md
FreeRTOS/FreeRTOS/Source/: tasks.c
FreeRTOS/FreeRTOS/Source/include/: FreeRTOS.h  task.h
blink/: CMakeLists.txt  blink.c
hello_world/: CMakeLists.txt
